@@ -1,0 +1,1 @@
+GTK_TYPE_TOOL_SHELL	GtkToolShell	GInterface	Gtk2::ToolShell
